--- a/index.html
+++ b/index.html
@@ -82,6 +82,52 @@
       <div data-scroll class="line-wrapper">
         <div class="line"></div>
       </div>
+
+      <!-- DESIGN -->
+      <section class="skills">
+        <h2 class="title">
+          <span data-scroll data-scroll-speed="1">D</span>
+          <span data-scroll data-scroll-speed="0">e</span>
+          <span data-scroll data-scroll-speed="1">s</span>
+          <span data-scroll data-scroll-speed="2">i</span>
+          <span data-scroll data-scroll-speed="0">g</span>
+          <span data-scroll data-scroll-speed="1">n</span>
+        </h2>
+
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p
+              data-scroll
+              data-scroll-speed="-2"
+              data-scroll-direction="horizontal"
+            >
+              XD
+            </p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p
+              data-scroll
+              data-scroll-speed="1"
+              data-scroll-direction="horizontal"
+            >
+              FIGMA
+            </p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p
+              data-scroll
+              data-scroll-speed="-6"
+              data-scroll-direction="horizontal"
+            >
+              Responsive
+            </p>
+          </div>
+        </div>
+      </section>
       <!-- FRONT-END -->
       <section class="skills">
         <h2 class="title">
@@ -148,51 +194,6 @@
               data-scroll-direction="horizontal"
             >
               SEO/SEA
-            </p>
-          </div>
-        </div>
-      </section>
-      <!-- DESIGN -->
-      <section class="skills">
-        <h2 class="title">
-          <span data-scroll data-scroll-speed="1">D</span>
-          <span data-scroll data-scroll-speed="0">e</span>
-          <span data-scroll data-scroll-speed="1">s</span>
-          <span data-scroll data-scroll-speed="2">i</span>
-          <span data-scroll data-scroll-speed="0">g</span>
-          <span data-scroll data-scroll-speed="1">n</span>
-        </h2>
-
-        <div class="wrapper">
-          <div data-scroll class="appear">
-            <p
-              data-scroll
-              data-scroll-speed="-2"
-              data-scroll-direction="horizontal"
-            >
-              Adobe XD
-            </p>
-          </div>
-        </div>
-        <div class="wrapper">
-          <div data-scroll class="appear">
-            <p
-              data-scroll
-              data-scroll-speed="1"
-              data-scroll-direction="horizontal"
-            >
-              Figma
-            </p>
-          </div>
-        </div>
-        <div class="wrapper">
-          <div data-scroll class="appear">
-            <p
-              data-scroll
-              data-scroll-speed="-6"
-              data-scroll-direction="horizontal"
-            >
-              Photoshop
             </p>
           </div>
         </div>
