--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Jean Scratch</title>
+    <title>Portfolio Bilal</title>
 
     <link rel="stylesheet" href="./assets/lib/locomotive-scroll.min.css" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
+    <link rel="icon" type="image/png" href="./assets/img/uxui.png" />
   </head>
   <body>
     <div data-scroll-container>
@@ -35,7 +36,7 @@
               data-scroll-direction="horizontal"
               data-scroll-position="left"
             >
-              UX/UI
+              Designer
             </h2>
           </div>
         </div>
@@ -47,7 +48,7 @@
               data-scroll-direction="horizontal"
               data-scroll-position="left"
             >
-              Designer
+              UX/UI
             </h2>
           </div>
         </div>
@@ -66,16 +67,17 @@
           <h2>À propos</h2>
         </div>
         <p>
-          Codeur à mes heures perdues et passionné par l'intégration de
-          maquettes, j'ai fait le choix d'en faire mon hobby.
+          En jonglant entre le code et les maquettes, j'ai décidé de faire de ma
+          passion un véritable passe-temps
         </p>
+        <br /><br />
         <p>
-          Cela ne m'a pas suffi, car je suis tout aussi attiré par le design
-          d'interface, l'UX/UI à changé ma vie et me voilà près pour en faire
-          mon métier.
+          Pourtant, cela ne me suffisait pas ! L'attrait pour le design
+          d'interface et les mystères de l'UX/UI ont pris le dessus, et me voilà
+          prêt à en faire mon métier.
         </p>
-
-        <p>En bref, j'adore créer des maquettes.</p>
+        <br /><br />
+        <p>En somme, créer des maquettes est mon petit plaisir coupable :)</p>
       </section>
 
       <!-- LINE -->
@@ -98,10 +100,10 @@
           <div data-scroll class="appear">
             <p
               data-scroll
-              data-scroll-speed="-2"
+              data-scroll-speed="6"
               data-scroll-direction="horizontal"
             >
-              XD
+              Brand Design
             </p>
           </div>
         </div>
@@ -109,10 +111,10 @@
           <div data-scroll class="appear">
             <p
               data-scroll
-              data-scroll-speed="1"
+              data-scroll-speed="2"
               data-scroll-direction="horizontal"
             >
-              FIGMA
+              Visual Design
             </p>
           </div>
         </div>
@@ -123,7 +125,29 @@
               data-scroll-speed="-6"
               data-scroll-direction="horizontal"
             >
-              Responsive
+              Wireframes
+            </p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p
+              data-scroll
+              data-scroll-speed="6"
+              data-scroll-direction="horizontal"
+            >
+              Maquettes
+            </p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p
+              data-scroll
+              data-scroll-speed="-4"
+              data-scroll-direction="horizontal"
+            >
+              Prototypes
             </p>
           </div>
         </div>
@@ -131,15 +155,19 @@
       <!-- FRONT-END -->
       <section class="skills">
         <h2 class="title">
-          <span data-scroll data-scroll-speed="1">F</span>
-          <span data-scroll data-scroll-speed="0">r</span>
-          <span data-scroll data-scroll-speed="1">o</span>
-          <span data-scroll data-scroll-speed="2">n</span>
-          <span data-scroll data-scroll-speed="0">t</span>
-          <span data-scroll data-scroll-speed="1">-</span>
+          <span data-scroll data-scroll-speed="1">D</span>
+          <span data-scroll data-scroll-speed="0">e</span>
+          <span data-scroll data-scroll-speed="1">v</span>
           <span data-scroll data-scroll-speed="2">e</span>
+          <span data-scroll data-scroll-speed="0">l</span>
+          <span data-scroll data-scroll-speed="1">o</span>
+          <span data-scroll data-scroll-speed="2">p</span>
+          <span data-scroll data-scroll-speed="1">p</span>
+          <span data-scroll data-scroll-speed="2">e</span>
+          <span data-scroll data-scroll-speed="0">m</span>
+          <span data-scroll data-scroll-speed="1">e</span>
           <span data-scroll data-scroll-speed="1">n</span>
-          <span data-scroll data-scroll-speed="0">d</span>
+          <span data-scroll data-scroll-speed="0">t</span>
         </h2>
 
         <div class="wrapper">
@@ -193,7 +221,18 @@
               data-scroll-speed="-3"
               data-scroll-direction="horizontal"
             >
-              SEO/SEA
+              SEO
+            </p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p
+              data-scroll
+              data-scroll-speed="3"
+              data-scroll-direction="horizontal"
+            >
+              FIGMA
             </p>
           </div>
         </div>
@@ -275,10 +314,10 @@
         >
           <div class="projects-container">
             <div data-scroll data-scroll-speed="1" class="project" id="cv">
-              <img src="./assets/img/CV.PNG" alt="CV" />
+              <img src="./assets/img/CV.png" alt="CV" />
               <div class="project-infos">
-                <a href="/assets/img/CV.PNG" target="_blank">Mon CV</a>
-                <p>2022</p>
+                <a href="/assets/img/CV.pdf" target="_blank">Mon CV</a>
+                <p>2023</p>
               </div>
             </div>
           </div>
@@ -290,7 +329,9 @@
         </div>
 
         <div class="social" id="social">
-          <a href="https://www.linkedin.com/in/belimrani/" target="_blank"
+          <a
+            href="https://www.linkedin.com/in/bilal-el-imrani-49153b28b/"
+            target="_blank"
             >In</a
           >
           <a href="https://github.com/Bilal-Elimrani-67" target="_blank">Gh</a>
